# hello-proxygen

./: .asciidoctorconfig.adoc  .gitignore  .gitmodules  CMakeLists.txt  HttpHandler.cpp  README.md  main.cpp
ci/: hello-base-deployment.yaml  hello-deployment.yaml  hello.docker  hello.sh
doc/: continuous-integration.adoc  docker.adoc  feature-test.adoc  hello.adoc  http-client.adoc  k8s.adoc  kubernetes.adoc  notes.adoc  performance-test.adoc  proxygen-curl-sample.adoc  test.adoc  todo.adoc
doc/image/: classes.puml.svg.cache  curl-init.puml.svg.cache  http-get.puml.svg.cache
docker/: hello-base.docker  hello-ci.docker  hello.docker  hello.sh
hello/: CMakeLists.txt  EchoHandler.cpp  EchoHandler.h  HelloHandler.cpp  HelloHandler.h  HttpHandler.cpp  HttpHandler.h  HttpHandlerFactory.cpp  HttpHandlerFactory.h  main.cpp
http-server/: CMakeLists.txt  HttpHandler.h
k8s/: hello-base-deployment.yaml  hello-deployment.yaml
kube/: Dockerfile
lib/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  TransactionHandler.cpp  TransactionHandler.h
script/: ramp.py  rocky-linux-9-deps.sh
server/: HttpHandler.cpp
test/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  Test.cpp  Test.h  TransactionHandler.cpp  TransactionHandler.h  feature_test.cpp  feature_test.h  ft_main.cpp  main.cpp  perf_main.cpp  performance_test.cpp  performance_test.h  test_server_main.cpp
